5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4005/executions/1798_2568.log
== SUBMITION (2019-06-12 12:59:51) 
-- CODE:
x+int(input("quantidade:"))
for i in range(x,0,-1):
	s=i*"*"+2(x-i)*"o"+i*"*"
	print(s)
-- EXECUTION TIME:
0.615057
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2568/main.py", line 1, in <module>
    x+int(input())
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:00:26) 
-- CODE:
from numpy import*
x+int(input("quantidade:"))
for i in range(x,0,-1):
	s=i*"*"+2(x-i)*"o"+i*"*"
	print(s)
-- EXECUTION TIME:
1.01148
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2568/main.py", line 2, in <module>
    x+int(input())
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:00:54) 
-- CODE:
from numpy import*
x=int(input("quantidade:"))
for i in range(x,0,-1):
	s=i*"*"+2(x-i)*"o"+i*"*"
	print(s)
-- EXECUTION TIME:
1.06626
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2568/main.py", line 4, in <module>
    s=i*"*"+2(x-i)*"o"+i*"*"
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:01:07) 
-- CODE:
x=int(input("quantidade:"))
for i in range(x,0,-1):
	s=i*"*"+2(x-i)*"o"+i*"*"
	print(s)
-- EXECUTION TIME:
0.907397
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2568/main.py", line 3, in <module>
    s=i*"*"+2(x-i)*"o"+i*"*"
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:01:16) 
-- CODE:
x=int(input("quantidade:"))
for i in range(x,0,-1):
	s=i*"*"+2(x-i)*"o"+i*"*"
	print(s)
-- EXECUTION TIME:
0.732499
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1798/2568/main.py", line 3, in <module>
    s=i*"*"+2(x-i)*"o"+i*"*"
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:01:56) 
-- CODE:
x=int(input("quantidade:"))
for i in range(x,0,-1):
	s=i*"*"+2(x-i)*"o"+i*"*"
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    s=i*"*"+2(x-i)*"o"+i*"*"
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:02:54) 
-- CODE:
x=input("quantidade:"))
for i in range(x,0,-1):
	s=i*"*"+2(x-i)*"o"+i*"*"
	print(s)
-- ERROR:
File "XXXX", line 1
    x=input())
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:02:55) 
-- CODE:
x=input("quantidade:"))
for i in range(x,0,-1):
	s=i*"*"+2(x-i)*"o"+i*"*"
	print(s)
-- EXECUTION TIME:
0.783158
-- ERROR:
  File "/home/codebench/codes/1798/2568/main.py", line 1
    x=input())
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:03:05) 
-- CODE:
x=input("quantidade:")
for i in range(x,0,-1):
	s=i*"*"+2(x-i)*"o"+i*"*"
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    for i in range(x,0,-1):
TypeError: 'str' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:03:21) 
-- CODE:
x=int(input("quantidade:"))
for i in range(x,0,-1):
	s=i*"*"+2(x-i)*"o"+i*"*"
	print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    s=i*"*"+2(x-i)*"o"+i*"*"
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:04:15) 
-- CODE:
x=int(input("quantidade:"))
for i in range(x,0,-1):
	s=i*"*"+2*(x-i)*"o"+i*"*"
	print(s)
-- EXECUTION TIME:
0.6639
-- TEST CASE 1:
---- input:
11
---- correct output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
---- user output:
**********************
**********oo**********
*********oooo*********
********oooooo********
*******oooooooo*******
******oooooooooo******
*****oooooooooooo*****
****oooooooooooooo****
***oooooooooooooooo***
**oooooooooooooooooo**
*oooooooooooooooooooo*
-- TEST CASE 2:
---- input:
19
---- correct output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
---- user output:
**************************************
******************oo******************
*****************oooo*****************
****************oooooo****************
***************oooooooo***************
**************oooooooooo**************
*************oooooooooooo*************
************oooooooooooooo************
***********oooooooooooooooo***********
**********oooooooooooooooooo**********
*********oooooooooooooooooooo*********
********oooooooooooooooooooooo********
*******oooooooooooooooooooooooo*******
******oooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooo*
-- TEST CASE 3:
---- input:
26
---- correct output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo********
*******oooooooooooooooooooooooooooooooooooooo*******
******oooooooooooooooooooooooooooooooooooooooo******
*****oooooooooooooooooooooooooooooooooooooooooo*****
****oooooooooooooooooooooooooooooooooooooooooooo****
***oooooooooooooooooooooooooooooooooooooooooooooo***
**oooooooooooooooooooooooooooooooooooooooooooooooo**
*oooooooooooooooooooooooooooooooooooooooooooooooooo*
---- user output:
****************************************************
*************************oo*************************
************************oooo************************
***********************oooooo***********************
**********************oooooooo**********************
*********************oooooooooo*********************
********************oooooooooooo********************
*******************oooooooooooooo*******************
******************oooooooooooooooo******************
*****************oooooooooooooooooo*****************
****************oooooooooooooooooooo****************
***************oooooooooooooooooooooo***************
**************oooooooooooooooooooooooo**************
*************oooooooooooooooooooooooooo*************
************oooooooooooooooooooooooooooo************
***********oooooooooooooooooooooooooooooo***********
**********oooooooooooooooooooooooooooooooo**********
*********oooooooooooooooooooooooooooooooooo*********
********oooooooooooooooooooooooooooooooooooo**
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
